  - BUG: Fix a bug with population::removeLoci when given keep loci are not in order.
  - NEW: Prevent the use of greater than one probabilities in Bernulli trails.
  - NEW: Add a Tkinter implementation for simuProgress.
  - BUG: Fix a bug where subpopulation names of merged population are not properly merged.

version 0.9.2 - (Rev 2472) Feb 20, 2009
  - NEW: Allow populations in a simulator to have different genotype structure. 
  - CHG: A simulator can no longer access genotypic structure information.
  - NEW: Add simulator::add to add new populations to a simulator.
  - CHG: Remove simulator::addInfoField and other functions because they can be
		applied to individual populations.
  - NEW: Allow the use of single form parameter in population::removeSubPops,
		removeIndividuals, addLoci, removeLoci and resize.
  - BUG: Fix a bug in adding locus to a population without any locus.
  - NEW: Alow the use of single form parameter in controlledOffspringGenerator.
		Handle single return value of allele frequency trajectory function.
  - NEW: Rename parameter fromSubPop to subPops and toSubPop to toSubPops for migrator, for
        naming consistency.
  - NEW: Add mode = ByIndInfo to migrator so that users can explicitly set
        migrate_to informatin field and migrate.
  - NEW: Remove pyMigrator from the core. The varying migration rate migrator can
        be easily implemented in a Python operator. The indFunc mode is not at all
        useful because it can be done by a Python operator plus mode=ByIndInfo.
  - NEW: Allow unordered lociPos specification in population(), lociNames will be
		rearranged accordingly.
  - NEW: Allow single parameter to parameters loci, ploidy in initByValue and initByFreq.
  - NEW: Remove parameter chrom from dumper(), allow single parameter input for 
		parameter loci in this operator.
  - NEW: Add pause operator to accept specified keys.
  - CHG: Remove rarely used parameters preStmts and postStmts from operators pyEval and
		pyExec.